# memories

./: .gitignore  .kalos.yaml  CHANGELOG.md  CLAUDE.md  CLOUD_SYNC_DESIGN.md  CLOUD_SYNC_README.md  Dockerfile  FAISS_AUDIT.md  GETTING_STARTED.md  PEERLIST_LAUNCH.md  PROJECT.md  PR_DESCRIPTION.md  README.md  THIRD_PARTY_NOTICES.md  __main__.py  app.py  audit_log.py  auth_context.py  cloud_sync.py  config_override.py  consolidator.py  docker-compose.eval.yml  docker-compose.qdrant-cluster.template.yml  docker-compose.snippet.yml  docker-compose.standalone.yml  docker-compose.yml  entity_locks.py  event_bus.py  evidence_packet.py  extraction_profiles.py  key_store.py  llm_extract.py  llm_provider.py  memories_auth.py  memories_client.py  memory_engine.py  onnx_embedder.py  openai_embedder.py  pyproject.toml  qdrant_config.py  (+8 more)
benchmarks/: load_test.py
cli/: __init__.py  client.py  config.py  output.py
docs/: active-search-monitoring.md  api-coverage.md  api.md  architecture.md  decisions.md  deployment.md  enterprise-readiness-audit-2026-05-04.md  pr67-review-25-item-closure.md
eval/: __main__.py  active_search_cases.json  active_search_eval.py  benchmarks.py  cc_executor.py  config.yaml  edge_cases.py  generate_synthetic_memories.py  graph_runner.py  judge.py  loader.py  longmemeval.py  memories_client.py  models.py  reporter.py  run.sh  run_active_search_eval.py  run_extraction_eval.py  run_graph_eval.py  run_longmemeval.py  run_musique_graph_eval.py  run_musique_preload.py  run_scenario_extraction_eval.py  runner.py  scorer.py  setup_validation.py
webui/: app.js  (+4 more)
(+278 files in other folders)
